4.0.0
Another refactoring.
-LCU Manager is now split in pieces.
-LCU Summoner manager threading updated.
-Updated icon graphics. The book icon grew out to be the icon of the window and is now replaced with a new one.
-Updated rune graphics. Mainly asthetics.
-Updated trader assistant graphics.
-Added Samira The desert rose